<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_general"
                android:textSize="22sp" />

        <CheckBox
                android:id="@+id/checkBoxRunOnBoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/run_on_boot" 
                android:checked="true" />
                
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sles plugin" 
                android:checked="true" />
                
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="wrapper for an OpenSL ES" />
                
        <CheckBox
                android:id="@+id/checkBoxUseHttpdPlugin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Local network streaming" 
                android:checked="false" />
                
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mixer" 
                android:checked="false" />
                
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuration_management"
                android:textSize="22sp" />
                
        <Button
                android:id="@+id/pickMusicDir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_directory_music" />
                
        <TextView
                android:id="@+id/musicDirectory"	
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                
        <Button
                android:id="@+id/pickPlaylistDir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_directory_playlist" />
                
        <TextView
                android:id="@+id/playlistDirectory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Http plugin"
                android:textSize="22sp" />
                
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hostname" />

        <EditText
                android:id="@+id/hostName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="127.0.0.1"
                android:lines="1" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/port"
                />

        <EditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1" />
                       
        <Button
                android:id="@+id/createConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_config_file" />
                            
        <LinearLayout
			        android:id="@+id/additionalSettings"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:visibility="gone">
        
	        <Button
	                android:id="@+id/clearDB"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/clear_db" />
                
        </LinearLayout>      
                    
    </LinearLayout>
    
</ScrollView>