<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_description_full"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/buttonsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_our_site_on_github" />
            
        <Button
            android:id="@+id/buttonsite2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_our_site_on_musicpd" />
            
    </LinearLayout>
</ScrollView>